# techcolab-backlog

./: .gitignore  CLAUDE.md  CLAUDE_FAQ.md  DESIGN_SYSTEM.md  README.md  SECURITY.md  TUTORIAL.md  _reorder_dashboard.py  _translate_labels.py  _translate_labels2.py  app.py  close-session.ps1  config.py  create-shortcuts.ps1  execute_agent.bat  install.bat  launcher.ps1  launcher.vbs  main.py  pyproject.toml  quick-push.ps1  requirements.txt  run_agent.bat  run_agent_silent.vbs  run_english_coach.bat  start_app.bat  start_silent.vbs  start_toilet_paper.bat  stop_app.bat  stop_app.vbs  team_agenda.py  techcolab-design-context.md
.claude/: launch.json  settings.local.json
.githooks/: pre-commit
.streamlit/: config.toml
agent/: AGENT_PROMPT.md  analysis_agent.py  daily_report.py  english_coach.py  scrape_sessions.py  update_status.py
assets/: brand.css
backlog/: cache.py  daily_log.py  index.py  schema.py  store.py
call-recorder/: .gitignore  CLAUDE.md  call-recorder.ps1  coach.py  english-coach.ps1  process.py  raycast-close-session.ps1  raycast-english-coach.ps1  raycast-execute-agent.ps1  raycast-launcher.ps1  raycast-quick-push.ps1  raycast-run-agent.ps1  raycast-vault-bootstrap.ps1  record.py  requirements.txt
components/: prefs.py  ui.py
docs/: FAQ.md  english-practice-architecture.md
ingestion/: cleaner.py  extractor.py  parser.py  pipeline.py
reports/: claude-pro-data.json  claude-pro-report.html  claude-pro-timeline.json
scripts/: techcolab-brand.css  tick_implemented.py  vault-bootstrap-clipboard.ps1  vault-bootstrap.ps1
tests/: conftest.py  (+19 more)
(+13 files in other folders)
